2002-11-04	Joel Sherrill <joel@OARcorp.com>

	* pppd/auth.c, rtems_webserver/uemf.h: Removed warnings.

2002-10-31	Joel Sherrill <joel@OARcorp.com>

	* rtems_webserver/socket.c, rtems_webserver/uemf.h: Removed
	warnings.

2002-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Reformat.
	Add autom4te*cache.
	Remove autom4te.cache.

2002-09-07	Joel Sherrill <joel@OARcorp.com>

	* pppd/ipcp.c, rtems_servers/ftpd.c: Add include files to resolve
	warnings.

2002-09-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* rtems_webserver/md5.h: Add missing newline.

2002-08-31	Joel Sherrill <joel@OARcorp.com>

	* rtems_webserver/webmain.c: Commented out rootWeb to eliminate warning.

2002-08-14	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* rtems_servers/ftpd.c: Remove unused variable buf.
	* pppd/md5.c: #include <string.h> to make gcc31 happy.
	* rtems_telnetd/telnetd.c: #include <string.h> to make gcc31 happy.
	* rtems_webserver/webmain.c: Remove unused variable dir, cp.

2002-08-12	Joel Sherrill <joel@OARcorp.com>

	* pppd/utils.c: Include i960 in varargs conditional to avoid error.

2002-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* pppd/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* rtems_servers/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* rtems_telnetd/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* rtems_webserver/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* wrapup/Makefile.am: Use .$(OBJEXT) instead of .o.

2002-07-25	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* pppd/chap.c, pppd/fsm.c, pppd/fsm.h, pppd/upap.c: Per PR255
	fix prototype mismatches.

2002-07-01	Joel Sherrill <joel@OARcorp.com>

	* rtems_webserver/misc.c: Per PR236 eliminate definition of strnlen().

2002-06-26	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Build libnetapps.a. 
	Don't preinstall libnetapps.a

2002-05-30	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Remove headers. Remove CHANGELOG.
	* configure.ac: Use AC_CONFIG_SRCDIR([pppd]).
