@@ -2,18 +2,14 @@
 ## $Id$
 ##
 
-
 include_rtemsdir = $(includedir)/rtems
 
 LIBNAME = lib.a
 LIB = $(ARCH)/$(LIBNAME)
 
 C_FILES = ftpd.c
-C_O_FILES = $(C_FILES:%.c=$(ARCH)/%.$(OBJEXT))
+OBJS = $(C_FILES:%.c=$(ARCH)/%.$(OBJEXT))
 
-OBJS = $(C_O_FILES)
-
-include $(RTEMS_ROOT)/make/custom/@RTEMS_BSP@.cfg
 include $(top_srcdir)/../../../automake/compile.am
 include $(top_srcdir)/../../../automake/lib.am
 
