@@ -2,7 +2,6 @@
 ## $Id$
 ##
 
-
 include_goaheaddir = $(includedir)/goahead
 
 LIBNAME = lib.a
@@ -12,13 +11,10 @@ C_FILES = asp.c balloc.c default.c ejlex.c ejparse.c emfdb.c form.c \
     h.c handler.c md5c.c mime.c misc.c webpage.c ringq.c rom.c security.c \
     sock.c socket.c sym.c uemf.c um.c url.c value.c wbase64.c webrom.c webs.c \
     websuemf.c webmain.c
-C_O_FILES = $(C_FILES:%.c=$(ARCH)/%.$(OBJEXT))
-
-OBJS = $(C_O_FILES)
+OBJS = $(C_FILES:%.c=$(ARCH)/%.$(OBJEXT))
 
 H_FILES = ej.h ejIntrn.h emfdb.h md5.h uemf.h um.h webs.h wsIntrn.h
 
-include $(RTEMS_ROOT)/make/custom/@RTEMS_BSP@.cfg
 include $(top_srcdir)/../../../automake/compile.am
 include $(top_srcdir)/../../../automake/lib.am
 
