@@ -1,3 +1,12 @@
+2003-01-15	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* wrapup/Makefile.am: Don't include @RTEMS_BSP@.cfg.
+	* pppd/Makefile.am: Don't include @RTEMS_BSP@.cfg.
+	  Eliminate *_O_FILES.
+	* rtems_servers/Makefile.am: Ditto.
+	* rtems_webserver/Makefile.am: Ditto.
+	* rtems_telnetd/Makefile.am: Ditto.
+
 2002-11-04	Joel Sherrill <joel@OARcorp.com>
 
 	* pppd/auth.c, rtems_webserver/uemf.h: Removed warnings.
